Enhance model comparison analysis and notebook documentation
- Updated MODEL_COMPARISON_ANALYSIS.md to provide detailed strategies for document classification, field extraction, high-volume processing, and hallucination sensitivity.
- Added clear definitions and examples for hallucination, precision, and recall, along with a model selection guide based on use cases.
- Revised the model performance profile table to include dynamic calculations for precision, recall, and F1 scores.
- Improved the model comparison notebook to calculate recall dynamically from batch results instead of using hardcoded values.
- Adjusted related documentation references for accuracy in the context of extraction metrics.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -5399,11 +5399,13 @@
     "\n",
     "# Plot 3: Hallucination Rate vs Recall (Tradeoff)\n",
     "ax3 = fig.add_subplot(gs[0, 2])\n",
-    "recalls = [\n",
-    "    llama_hallucination.get('recall', 0.7797),  # From previous metrics\n",
-    "    internvl_hallucination.get('recall', 0.4367),\n",
-    "    internvl_nq_hallucination.get('recall', 0.3873)\n",
-    "]\n",
+    "\n",
+    "# Calculate recall from batch results (NOT hardcoded!)\n",
+    "llama_recall = (llama_df['fields_matched'] / llama_df['total_fields']).mean() if not llama_df.empty else 0\n",
+    "internvl_8b_recall = (internvl3_quantized_df['fields_matched'] / internvl3_quantized_df['total_fields']).mean() if not internvl3_quantized_df.empty else 0\n",
+    "internvl_2b_recall = (internvl3_non_quantized_df['fields_matched'] / internvl3_non_quantized_df['total_fields']).mean() if not internvl3_non_quantized_df.empty else 0\n",
+    "\n",
+    "recalls = [llama_recall, internvl_8b_recall, internvl_2b_recall]\n",
     "\n",
     "ax3.scatter(halluc_rates, recalls, s=200, c=colors, alpha=0.7, edgecolors='black', linewidth=2)\n",
     "for i, model in enumerate(models):\n",
@@ -6126,17 +6128,139 @@
     "\n",
     "Based on the analysis above:\n",
     "\n",
-    "1. **Document Classification (PRIMARY)**: Use the model with highest document type classification accuracy\n",
-    "2. **Field Extraction (SECONDARY)**: Consider ensemble approach leveraging each model's field specialization\n",
-    "3. **High-Volume Processing**: Balance speed vs quality based on throughput requirements\n",
-    "4. **Hallucination Sensitivity**: Choose model based on tolerance for false positives vs false negatives\n",
+    "### 1. Document Classification (PRIMARY)\n",
+    "Use the model with highest document type classification accuracy for initial routing and categorization.\n",
+    "\n",
+    "### 2. Field Extraction Strategy (SECONDARY)\n",
+    "Consider an ensemble approach leveraging each model's field specialization:\n",
+    "- Use model-specific strengths for particular fields\n",
+    "- Implement confidence-based routing\n",
+    "- Fall back to best overall performer for general fields\n",
+    "\n",
+    "### 3. High-Volume Processing\n",
+    "Balance speed vs quality based on throughput requirements:\n",
+    "- **Fastest processing**: {'Llama-3.2-Vision-11B' if llama_speed > 0 and llama_speed < min(filter(lambda x: x > 0, [internvl_8b_speed, internvl_2b_speed])) else ('InternVL3-Quantized-8B' if internvl_8b_speed > 0 and internvl_8b_speed < internvl_2b_speed else 'InternVL3-NonQuantized-2B')} (~{min(filter(lambda x: x > 0, [llama_speed, internvl_8b_speed, internvl_2b_speed])):.1f}s/doc)\n",
+    "- **Best accuracy**: {'Llama-3.2-Vision-11B' if llama_overall_accuracy > max(internvl_8b_overall_accuracy, internvl_2b_overall_accuracy) else ('InternVL3-Quantized-8B' if internvl_8b_overall_accuracy > internvl_2b_overall_accuracy else 'InternVL3-NonQuantized-2B')} ({max(llama_overall_accuracy, internvl_8b_overall_accuracy, internvl_2b_overall_accuracy):.2f}% overall)\n",
+    "- **Best balance**: Consider throughput constraints and acceptable accuracy threshold\n",
+    "\n",
+    "### 4. Hallucination Sensitivity: Critical Business Decision\n",
+    "\n",
+    "#### Understanding Hallucination in Document Extraction\n",
+    "\n",
+    "**Hallucination** = Model extracts a value when ground truth is `NOT_FOUND`\n",
+    "\n",
+    "**Example:**\n",
+    "- Ground Truth: `BUSINESS_ABN = NOT_FOUND` (field doesn't exist in document)\n",
+    "- Model Output: `BUSINESS_ABN = \"12345678901\"` ← **HALLUCINATION** (invented data)\n",
+    "\n",
+    "#### The Tradeoff: Precision vs Recall\n",
+    "\n",
+    "**High Precision (Low Hallucination)**\n",
+    "- Model only extracts when very confident\n",
+    "- **Few false positives** (hallucinations)\n",
+    "- **Many false negatives** (missed fields)\n",
+    "- Conservative approach: \"Only extract what you're sure about\"\n",
+    "\n",
+    "**High Recall (Risk of Hallucination)**\n",
+    "- Model extracts aggressively to catch all fields\n",
+    "- **Few false negatives** (catches most fields)\n",
+    "- **More false positives** (risk of hallucinations)\n",
+    "- Aggressive approach: \"Extract everything, review later\"\n",
+    "\n",
+    "#### Relationship to Metrics\n",
+    "\n",
+    "```\n",
+    "Precision = Correct Extractions / All Extractions\n",
+    "  → High precision = Low hallucination rate\n",
+    "  → Model is cautious, only extracts when confident\n",
+    "\n",
+    "Recall = Correct Extractions / All Fields That Should Be Extracted\n",
+    "  → High recall = Catches more fields\n",
+    "  → Risk: May hallucinate to achieve higher coverage\n",
+    "\n",
+    "Hallucination Rate = Hallucinations / NOT_FOUND Opportunities\n",
+    "  → Direct measure of false positive risk\n",
+    "  → Critical for production reliability\n",
+    "```\n",
+    "\n",
+    "#### Model Selection Guide Based on Use Case\n",
+    "\n",
+    "**Choose HIGH PRECISION Model ({'Llama-3.2-Vision-11B' if llama_overall_precision > max(internvl_8b_overall_precision, internvl_2b_overall_precision) else ('InternVL3-Quantized-8B' if internvl_8b_overall_precision > internvl_2b_overall_precision else 'InternVL3-NonQuantized-2B')}: {max(llama_overall_precision, internvl_8b_overall_precision, internvl_2b_overall_precision):.2%}) if:**\n",
+    "- ✅ Processing financial/regulatory data (invoices, tax documents)\n",
+    "- ✅ Automated processing with no human review\n",
+    "- ✅ **False data is worse than missing data**\n",
+    "- ✅ You can afford to manually review `NOT_FOUND` fields\n",
+    "- ✅ Compliance and audit requirements\n",
+    "- ✅ Low tolerance for hallucinations\n",
+    "\n",
+    "**Example**: Bank reconciliation where a hallucinated amount could cause financial errors.\n",
+    "\n",
+    "**Choose HIGH RECALL Model ({'Llama-3.2-Vision-11B' if llama_overall_recall > max(internvl_8b_overall_recall, internvl_2b_overall_recall) else ('InternVL3-Quantized-8B' if internvl_8b_overall_recall > internvl_2b_overall_recall else 'InternVL3-NonQuantized-2B')}: {max(llama_overall_recall, internvl_8b_overall_recall, internvl_2b_overall_recall):.2%}) if:**\n",
+    "- ✅ Comprehensive data capture is critical\n",
+    "- ✅ Human review pipeline can catch errors\n",
+    "- ✅ **Missing data is worse than wrong data**\n",
+    "- ✅ Initial screening/discovery use case\n",
+    "- ✅ Maximizing field coverage is priority\n",
+    "- ✅ Can tolerate some false positives\n",
+    "\n",
+    "**Example**: Legal document discovery where missing a field could have serious consequences.\n",
+    "\n",
+    "**Choose BALANCED Model (for high-volume processing) if:**\n",
+    "- ✅ High-volume processing requirements\n",
+    "- ✅ Need reasonable precision and recall\n",
+    "- ✅ Speed is a critical factor\n",
+    "- ✅ Standard business document processing\n",
+    "\n",
+    "**Example**: Receipt processing for expense management with human spot-checking.\n",
+    "\n",
+    "#### Your Model Performance Profile\n",
+    "\n",
+    "Based on the analysis:\n",
+    "\n",
+    "| Model | Precision | Recall | F1 | Best For |\n",
+    "|-------|-----------|--------|----|----|\n",
+    "| **Llama-3.2-Vision-11B** | {llama_overall_precision:.2%} | {llama_overall_recall:.2%} | {llama_overall_f1:.4f} | {'🏆 Best Precision' if llama_overall_precision > max(internvl_8b_overall_precision, internvl_2b_overall_precision) else ''}{'🏆 Best Recall' if llama_overall_recall > max(internvl_8b_overall_recall, internvl_2b_overall_recall) else ''}{'🏆 Best F1' if llama_overall_f1 > max(internvl_8b_overall_f1, internvl_2b_overall_f1) else ''} |\n",
+    "| **InternVL3-Quantized-8B** | {internvl_8b_overall_precision:.2%} | {internvl_8b_overall_recall:.2%} | {internvl_8b_overall_f1:.4f} | {'🏆 Best Precision' if internvl_8b_overall_precision > max(llama_overall_precision, internvl_2b_overall_precision) else ''}{'🏆 Best Recall' if internvl_8b_overall_recall > max(llama_overall_recall, internvl_2b_overall_recall) else ''}{'🏆 Best F1' if internvl_8b_overall_f1 > max(llama_overall_f1, internvl_2b_overall_f1) else ''} |\n",
+    "| **InternVL3-NonQuantized-2B** | {internvl_2b_overall_precision:.2%} | {internvl_2b_overall_recall:.2%} | {internvl_2b_overall_f1:.4f} | {'🏆 Best Precision' if internvl_2b_overall_precision > max(llama_overall_precision, internvl_8b_overall_precision) else ''}{'🏆 Best Recall' if internvl_2b_overall_recall > max(llama_overall_recall, internvl_8b_overall_recall) else ''}{'🏆 Best F1' if internvl_2b_overall_f1 > max(llama_overall_f1, internvl_8b_overall_f1) else ''} |\n",
+    "\n",
+    "**Key Insights:**\n",
+    "- **Precision Leader**: {'Llama-3.2-Vision-11B' if llama_overall_precision > max(internvl_8b_overall_precision, internvl_2b_overall_precision) else ('InternVL3-Quantized-8B' if internvl_8b_overall_precision > internvl_2b_overall_precision else 'InternVL3-NonQuantized-2B')} ({max(llama_overall_precision, internvl_8b_overall_precision, internvl_2b_overall_precision):.2%})\n",
+    "- **Recall Leader**: {'Llama-3.2-Vision-11B' if llama_overall_recall > max(internvl_8b_overall_recall, internvl_2b_overall_recall) else ('InternVL3-Quantized-8B' if internvl_8b_overall_recall > internvl_2b_overall_recall else 'InternVL3-NonQuantized-2B')} ({max(llama_overall_recall, internvl_8b_overall_recall, internvl_2b_overall_recall):.2%})\n",
+    "- **F1 Leader**: {'Llama-3.2-Vision-11B' if llama_overall_f1 > max(internvl_8b_overall_f1, internvl_2b_overall_f1) else ('InternVL3-Quantized-8B' if internvl_8b_overall_f1 > internvl_2b_overall_f1 else 'InternVL3-NonQuantized-2B')} ({max(llama_overall_f1, internvl_8b_overall_f1, internvl_2b_overall_f1):.4f})\n",
+    "- **Speed vs Accuracy Tradeoff**: Consider throughput requirements against quality needs\n",
+    "\n",
+    "#### Production Deployment Strategy\n",
+    "\n",
+    "**Phase 1: Initial Deployment**\n",
+    "1. Choose model based on your primary business constraint:\n",
+    "   - **Financial accuracy** → Highest precision model\n",
+    "   - **Data completeness** → Highest recall model\n",
+    "   - **High volume** → Fastest processing model\n",
+    "\n",
+    "**Phase 2: Monitoring**\n",
+    "2. Track in production:\n",
+    "   - Hallucination rate on `NOT_FOUND` fields\n",
+    "   - Manual review costs (false negatives)\n",
+    "   - Error correction costs (false positives)\n",
+    "\n",
+    "**Phase 3: Optimization**\n",
+    "3. Adjust strategy based on actual costs:\n",
+    "   - If missing fields cost more → Switch to higher recall model\n",
+    "   - If hallucinations cost more → Switch to higher precision model\n",
+    "   - If volume is issue → Consider faster model with review pipeline\n",
+    "\n",
+    "**Phase 4: Advanced Optimization**\n",
+    "4. Consider ensemble approaches:\n",
+    "   - Use high-precision model for critical fields (amounts, dates)\n",
+    "   - Use high-recall model for descriptive fields (line items)\n",
+    "   - Route by document confidence scores\n",
     "\n",
     "---\n",
     "\n",
     "## Related Documentation\n",
     "\n",
     "- [three_model_field_comparison.md](three_model_field_comparison.md) - Detailed field-by-field analysis\n",
-    "- [ACCURACY_PARADOX_EXPLAINED.md](ACCURACY_PARADOX_EXPLAINED.md) - Why F1 > Accuracy for extraction\n",
+    "- [ACCURACY_PARADOX_EXPLAINED.md](ACCURACY_PARADOX_EXPLAINED.md) - Why Accuracy > F1 for extraction\n",
     "- [HALLUCINATION_ANALYSIS_ADDED.md](HALLUCINATION_ANALYSIS_ADDED.md) - Hallucination analysis methodology\n",
     "\n",
     "---\n",
