Enhance model comparison report with efficiency analysis and document-type specific recommendations
- Added a new section for performance efficiency score, calculating accuracy and throughput for each model.
- Included a table summarizing average accuracy, speed, throughput, and efficiency score for Llama-3.2-Vision-11B, InternVL3-Quantized-8B, and InternVL3-NonQuantized-2B.
- Implemented logic to identify the model with the highest efficiency.
- Introduced document-type specific recommendations based on overall accuracy, highlighting the best model for each document type.
- Enhanced field performance insights to include significant model performance differences and problematic fields requiring attention.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -6229,7 +6229,90 @@
     "- **F1 Leader**: {'Llama-3.2-Vision-11B' if llama_overall_f1 > max(internvl_8b_overall_f1, internvl_2b_overall_f1) else ('InternVL3-Quantized-8B' if internvl_8b_overall_f1 > internvl_2b_overall_f1 else 'InternVL3-NonQuantized-2B')} ({max(llama_overall_f1, internvl_8b_overall_f1, internvl_2b_overall_f1):.4f})\n",
     "- **Speed vs Accuracy Tradeoff**: Consider throughput requirements against quality needs\n",
     "\n",
-    "#### Production Deployment Strategy\n",
+    "#### Efficiency Analysis\n",
+    "\n",
+    "**Performance Efficiency Score** = Accuracy × Throughput (docs/min)\n",
+    "\n",
+    "| Model | Avg Accuracy | Avg Speed | Throughput | Efficiency Score |\n",
+    "|-------|--------------|-----------|------------|------------------|\n",
+    "| **Llama-3.2-Vision-11B** | {llama_overall_accuracy:.2f}% | {llama_speed:.1f}s | {60/llama_speed if llama_speed > 0 else 0:.1f} docs/min | {(llama_overall_accuracy * (60/llama_speed if llama_speed > 0 else 0)):.1f} |\n",
+    "| **InternVL3-Quantized-8B** | {internvl_8b_overall_accuracy:.2f}% | {internvl_8b_speed:.1f}s | {60/internvl_8b_speed if internvl_8b_speed > 0 else 0:.1f} docs/min | {(internvl_8b_overall_accuracy * (60/internvl_8b_speed if internvl_8b_speed > 0 else 0)):.1f} |\n",
+    "| **InternVL3-NonQuantized-2B** | {internvl_2b_overall_accuracy:.2f}% | {internvl_2b_speed:.1f}s | {60/internvl_2b_speed if internvl_2b_speed > 0 else 0:.1f} docs/min | {(internvl_2b_overall_accuracy * (60/internvl_2b_speed if internvl_2b_speed > 0 else 0)):.1f} |\n",
+    "\n",
+    "**Highest Efficiency**: {'Llama-3.2-Vision-11B' if (llama_overall_accuracy * (60/llama_speed if llama_speed > 0 else 0)) > max((internvl_8b_overall_accuracy * (60/internvl_8b_speed if internvl_8b_speed > 0 else 0)), (internvl_2b_overall_accuracy * (60/internvl_2b_speed if internvl_2b_speed > 0 else 0))) else ('InternVL3-Quantized-8B' if (internvl_8b_overall_accuracy * (60/internvl_8b_speed if internvl_8b_speed > 0 else 0)) > (internvl_2b_overall_accuracy * (60/internvl_2b_speed if internvl_2b_speed > 0 else 0)) else 'InternVL3-NonQuantized-2B')}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # Calculate document-type specific recommendations\n",
+    "    doc_type_section = \"\"\n",
+    "    all_dfs_list = [(llama_df, 'Llama-3.2-Vision-11B'), \n",
+    "                    (internvl3_quantized_df, 'InternVL3-Quantized-8B'),\n",
+    "                    (internvl3_non_quantized_df, 'InternVL3-NonQuantized-2B')]\n",
+    "    \n",
+    "    # Combine all dataframes with model labels\n",
+    "    combined_for_doctype = []\n",
+    "    for df, model_name in all_dfs_list:\n",
+    "        if not df.empty and 'document_type' in df.columns:\n",
+    "            temp_df = df.copy()\n",
+    "            temp_df['model'] = model_name\n",
+    "            combined_for_doctype.append(temp_df)\n",
+    "    \n",
+    "    if combined_for_doctype:\n",
+    "        import pandas as pd\n",
+    "        all_data = pd.concat(combined_for_doctype, ignore_index=True)\n",
+    "        doc_performance = all_data.groupby(['document_type', 'model'])['overall_accuracy'].mean().unstack()\n",
+    "        \n",
+    "        doc_type_section += \"\\n#### Document-Type Specific Recommendations\\n\\n\"\n",
+    "        doc_type_section += \"**Best Model by Document Type:**\\n\\n\"\n",
+    "        for doc_type in doc_performance.index:\n",
+    "            best_model = doc_performance.loc[doc_type].idxmax()\n",
+    "            best_score = doc_performance.loc[doc_type].max()\n",
+    "            doc_type_section += f\"- **{doc_type.replace('_', ' ').title()}**: {best_model} ({best_score:.2f}% accuracy)\\n\"\n",
+    "    \n",
+    "    report += doc_type_section\n",
+    "    \n",
+    "    # Field Performance Insights\n",
+    "    if field_performance_df is not None and not field_performance_df.empty:\n",
+    "        field_insights = \"\\n#### Field Performance Insights\\n\\n\"\n",
+    "        \n",
+    "        # Get model columns\n",
+    "        model_cols = [col for col in field_performance_df.columns if any(x in col for x in ['Llama', 'InternVL'])]\n",
+    "        \n",
+    "        if len(model_cols) >= 2:\n",
+    "            # Calculate performance spread\n",
+    "            field_perf_copy = field_performance_df.copy()\n",
+    "            field_perf_copy['max_diff'] = field_perf_copy[model_cols].max(axis=1) - field_perf_copy[model_cols].min(axis=1)\n",
+    "            \n",
+    "            # Significant differences (>20% spread)\n",
+    "            significant_diff = field_perf_copy[field_perf_copy['max_diff'] > 0.2].nlargest(5, 'max_diff')\n",
+    "            \n",
+    "            if not significant_diff.empty:\n",
+    "                field_insights += \"**Fields with Significant Model Performance Differences (>20% spread):**\\n\\n\"\n",
+    "                for field_name in significant_diff.index:\n",
+    "                    if 'best_model' in field_perf_copy.columns and 'best_score' in field_perf_copy.columns:\n",
+    "                        best_model = field_perf_copy.loc[field_name, 'best_model']\n",
+    "                        best_score = field_perf_copy.loc[field_name, 'best_score']\n",
+    "                        worst_score = field_perf_copy.loc[field_name, model_cols].min()\n",
+    "                        advantage = best_score - worst_score\n",
+    "                        field_insights += f\"- **{field_name}**: Use {best_model} ({best_score*100:.0f}% vs {worst_score*100:.0f}%, +{advantage*100:.0f}% advantage)\\n\"\n",
+    "            \n",
+    "            # Calculate average accuracy per field\n",
+    "            field_perf_copy['avg_accuracy'] = field_perf_copy[model_cols].mean(axis=1)\n",
+    "            \n",
+    "            # Problematic fields (<50% avg accuracy)\n",
+    "            problematic = field_perf_copy[field_perf_copy['avg_accuracy'] < 0.5]\n",
+    "            \n",
+    "            if not problematic.empty:\n",
+    "                field_insights += \"\\n**⚠️ Problematic Fields Requiring Attention (<50% avg accuracy):**\\n\\n\"\n",
+    "                for field_name in problematic.head(5).index:\n",
+    "                    avg_acc = field_perf_copy.loc[field_name, 'avg_accuracy']\n",
+    "                    field_insights += f\"- **{field_name}**: {avg_acc*100:.0f}% average accuracy - Consider prompt optimization or additional fine tuning\\n\"\n",
+    "        \n",
+    "        report += field_insights\n",
+    "    \n",
+    "\n",
+    "    report += \"\"\"\\n#### Production Deployment Strategy\n",
     "\n",
     "**Phase 1: Initial Deployment**\n",
     "1. Choose model based on your primary business constraint:\n",
