Refactor code structure for improved readability and maintainability

--- a/model_comparison_reporter.ipynb
+++ b/model_comparison_reporter.ipynb
@@ -5503,230 +5503,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Business Recommendations"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Cell 26\n",
-    "\n",
-    "# def generate_business_recommendations(df: pd.DataFrame, field_performance: pd.DataFrame = None):\n",
-    "#     \"\"\"\n",
-    "#     Generate executive business recommendations based on CSV data analysis only.\n",
-    "#     \"\"\"\n",
-    "#     if df.empty:\n",
-    "#         return\n",
-    "    \n",
-    "#     rprint(\"\\n[bold green]💼 EXECUTIVE BUSINESS RECOMMENDATIONS[/bold green]\")\n",
-    "    \n",
-    "#     # Overall performance leader\n",
-    "#     overall_leader = df.groupby('model')['overall_accuracy'].mean().idxmax()\n",
-    "#     speed_leader = df.groupby('model')['processing_time'].mean().idxmin()\n",
-    "    \n",
-    "#     # Calculate key metrics\n",
-    "#     model_stats = df.groupby('model').agg({\n",
-    "#         'overall_accuracy': 'mean',\n",
-    "#         'processing_time': 'mean'\n",
-    "#     })\n",
-    "    \n",
-    "#     rprint(\"\\n[bold blue]🎯 PRIMARY RECOMMENDATION:[/bold blue]\")\n",
-    "    \n",
-    "#     if overall_leader == speed_leader:\n",
-    "#         rprint(f\"  • **Deploy {overall_leader}** - Clear winner on both accuracy and speed\")\n",
-    "#     else:\n",
-    "#         accuracy_leader_score = model_stats.loc[overall_leader, 'overall_accuracy']\n",
-    "#         speed_leader_score = model_stats.loc[speed_leader, 'processing_time']\n",
-    "        \n",
-    "#         rprint(f\"  • **For Accuracy-Critical Applications**: Deploy {overall_leader} ({accuracy_leader_score:.1f}% avg accuracy)\")\n",
-    "#         rprint(f\"  • **For High-Volume Processing**: Deploy {speed_leader} ({speed_leader_score:.1f}s avg processing)\")\n",
-    "    \n",
-    "#     rprint(\"\\n[bold blue]📋 USE CASE SPECIFIC RECOMMENDATIONS:[/bold blue]\")\n",
-    "    \n",
-    "#     # Document-specific recommendations\n",
-    "#     doc_performance = df.groupby(['document_type', 'model'])['overall_accuracy'].mean().unstack()\n",
-    "    \n",
-    "#     for doc_type in doc_performance.index:\n",
-    "#         best_model = doc_performance.loc[doc_type].idxmax()\n",
-    "#         best_score = doc_performance.loc[doc_type].max()\n",
-    "#         rprint(f\"  • **{doc_type.title()} Processing**: Use {best_model} ({best_score:.1f}% accuracy)\")\n",
-    "    \n",
-    "#     # Field-specific recommendations\n",
-    "#     if field_performance is not None and not field_performance.empty:\n",
-    "#         rprint(\"\\n[bold blue]🔍 FIELD-SPECIFIC RECOMMENDATIONS:[/bold blue]\")\n",
-    "        \n",
-    "#         # Identify fields with significant performance differences between models\n",
-    "#         model_cols = [col for col in field_performance.columns if col not in ['avg_accuracy', 'variance', 'best_model', 'best_score', 'max_diff']]\n",
-    "        \n",
-    "#         if len(model_cols) >= 2:\n",
-    "#             # Calculate performance spread for each field\n",
-    "#             field_performance['max_diff'] = field_performance[model_cols].max(axis=1) - field_performance[model_cols].min(axis=1)\n",
-    "            \n",
-    "#             # Get fields with significant differences (>20% spread)\n",
-    "#             significant_diff_fields = field_performance[field_performance['max_diff'] > 0.2].nlargest(5, 'max_diff')\n",
-    "            \n",
-    "#             if not significant_diff_fields.empty:\n",
-    "#                 rprint(\"  **Fields with Significant Model Performance Differences:**\")\n",
-    "#                 for field_name, row in significant_diff_fields.iterrows():\n",
-    "#                     best_model = row['best_model']\n",
-    "#                     best_score = row['best_score']\n",
-    "#                     worst_score = row[model_cols].min()\n",
-    "#                     advantage = best_score - worst_score\n",
-    "#                     rprint(f\"    • {field_name}: Use **{best_model}** ({best_score:.0%} vs {worst_score:.0%}, +{advantage:.0%} advantage)\")\n",
-    "        \n",
-    "#         # Identify consistently problematic fields\n",
-    "#         problematic_fields = field_performance[field_performance['avg_accuracy'] < 0.5]\n",
-    "#         if not problematic_fields.empty:\n",
-    "#             rprint(\"\\n  **⚠️ Fields Requiring Attention (Low Accuracy):**\")\n",
-    "#             for field_name, row in problematic_fields.head(5).iterrows():\n",
-    "#                 avg_acc = row['avg_accuracy']\n",
-    "#                 rprint(f\"    • {field_name}: {avg_acc:.0%} average accuracy - Consider prompt optimization\")\n",
-    "    \n",
-    "#     rprint(\"\\n[bold blue]📊 PERFORMANCE EFFICIENCY (CSV Data Only):[/bold blue]\")\n",
-    "    \n",
-    "#     # Calculate pure performance efficiency metrics from CSV data only\n",
-    "#     for model in df['model'].unique():\n",
-    "#         model_data = df[df['model'] == model]\n",
-    "#         avg_accuracy = model_data['overall_accuracy'].mean()\n",
-    "#         avg_time = model_data['processing_time'].mean()\n",
-    "#         throughput = 60 / avg_time\n",
-    "        \n",
-    "#         # Pure efficiency score based only on CSV performance data\n",
-    "#         efficiency_score = avg_accuracy * throughput\n",
-    "#         rprint(f\"  • **{model}**: Efficiency score {efficiency_score:.1f} (accuracy × throughput)\")\n",
-    "    \n",
-    "#     rprint(\"\\n[bold blue]⚡ PERFORMANCE COMPARISON SUMMARY:[/bold blue]\")\n",
-    "    \n",
-    "#     # Generate data-driven insights based only on CSV metrics\n",
-    "#     accuracy_winner = df.groupby('model')['overall_accuracy'].mean().idxmax()\n",
-    "#     speed_winner = df.groupby('model')['processing_time'].mean().idxmin()\n",
-    "#     consistency_winner = df.groupby('model')['overall_accuracy'].std().idxmin()\n",
-    "    \n",
-    "#     rprint(f\"  • **Highest Average Accuracy**: {accuracy_winner}\")\n",
-    "#     rprint(f\"  • **Fastest Processing**: {speed_winner}\")  \n",
-    "#     rprint(f\"  • **Most Consistent Results**: {consistency_winner}\")\n",
-    "\n",
-    "# # Generate recommendations with field-level insights\n",
-    "# if not combined_df.empty:\n",
-    "#     field_perf = field_performance if 'field_performance' in locals() and not field_performance.empty else None\n",
-    "#     generate_business_recommendations(combined_df, field_perf)\n",
-    "# else:\n",
-    "#     rprint(\"[red]❌ Cannot generate recommendations - no data available[/red]\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Cell 27\n",
-    "\n",
-    "# def export_executive_report(df: pd.DataFrame, output_dir: str = \"output/reports\", visualization_timestamp: str = None):\n",
-    "#     \"\"\"\n",
-    "#     Export a comprehensive executive report in multiple formats.\n",
-    "#     \"\"\"\n",
-    "#     if df.empty:\n",
-    "#         rprint(\"[red]❌ Cannot export report - no data available[/red]\")\n",
-    "#         return\n",
-    "    \n",
-    "#     timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "#     output_path = Path(output_dir)\n",
-    "#     output_path.mkdir(parents=True, exist_ok=True)\n",
-    "    \n",
-    "#     # Export detailed CSV comparison\n",
-    "#     comparison_file = output_path / f\"executive_model_comparison_{timestamp}.csv\"\n",
-    "#     df.to_csv(comparison_file, index=False)\n",
-    "    \n",
-    "#     # Export summary statistics\n",
-    "#     summary_file = output_path / f\"executive_summary_{timestamp}.csv\"\n",
-    "#     summary_stats = generate_executive_summary(df)\n",
-    "#     summary_stats.to_csv(summary_file, index=False)\n",
-    "    \n",
-    "#     rprint(\"\\n[green]✅ Executive reports exported:[/green]\")\n",
-    "#     rprint(f\"  • Detailed comparison: {comparison_file}\")\n",
-    "#     rprint(f\"  • Executive summary: {summary_file}\")\n",
-    "    \n",
-    "#     # Generate markdown report with visualization\n",
-    "#     markdown_file = output_path / f\"executive_report_{timestamp}.md\"\n",
-    "#     with open(markdown_file, 'w') as f:\n",
-    "#         f.write(\"# Executive Model Comparison Report\\n\\n\")\n",
-    "#         f.write(f\"**Generated**: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\\n\\n\")\n",
-    "        \n",
-    "#         # Include visualization if available\n",
-    "#         if visualization_timestamp:\n",
-    "#             viz_path = f\"../visualizations/executive_comparison_{visualization_timestamp}.png\"\n",
-    "#             f.write(\"## Performance Dashboard\\n\\n\")\n",
-    "#             f.write(f\"![Executive Performance Comparison]({viz_path})\\n\\n\")\n",
-    "        \n",
-    "#         f.write(\"## Executive Summary\\n\\n\")\n",
-    "        \n",
-    "#         # Model comparison summary\n",
-    "#         for model in df['model'].unique():\n",
-    "#             model_data = df[df['model'] == model]\n",
-    "#             avg_acc = model_data['overall_accuracy'].mean()\n",
-    "#             avg_time = model_data['processing_time'].mean()\n",
-    "#             throughput = 60 / avg_time\n",
-    "            \n",
-    "#             f.write(f\"### {model}\\n\")\n",
-    "#             f.write(f\"- **Average Accuracy**: {avg_acc:.1f}%\\n\")\n",
-    "#             f.write(f\"- **Average Processing Time**: {avg_time:.1f} seconds\\n\")\n",
-    "#             f.write(f\"- **Throughput**: {throughput:.1f} documents per minute\\n\")\n",
-    "#             f.write(f\"- **Documents Processed**: {len(model_data)}\\n\\n\")\n",
-    "        \n",
-    "#         f.write(\"## Document Type Performance\\n\\n\")\n",
-    "#         doc_perf = df.groupby(['document_type', 'model'])['overall_accuracy'].mean().unstack()\n",
-    "#         f.write(doc_perf.to_markdown())\n",
-    "#         f.write(\"\\n\\n## Key Findings\\n\\n\")\n",
-    "        \n",
-    "#         # Add key findings based on data\n",
-    "#         accuracy_leader = df.groupby('model')['overall_accuracy'].mean().idxmax()\n",
-    "#         speed_leader = df.groupby('model')['processing_time'].mean().idxmin()\n",
-    "        \n",
-    "#         f.write(f\"- **Accuracy Leader**: {accuracy_leader}\\n\")\n",
-    "#         f.write(f\"- **Speed Leader**: {speed_leader}\\n\")\n",
-    "#         f.write(f\"- **Best for Invoices**: {df[df['document_type']=='invoice'].groupby('model')['overall_accuracy'].mean().idxmax()}\\n\")\n",
-    "#         f.write(f\"- **Best for Receipts**: {df[df['document_type']=='receipt'].groupby('model')['overall_accuracy'].mean().idxmax()}\\n\")\n",
-    "#         f.write(f\"- **Best for Bank Statements**: {df[df['document_type']=='bank_statement'].groupby('model')['overall_accuracy'].mean().idxmax()}\\n\")\n",
-    "        \n",
-    "#         f.write(\"\\n\\n## Recommendations\\n\\n\")\n",
-    "#         f.write(\"Detailed recommendations and analysis available in the full comparison notebook.\\n\")\n",
-    "    \n",
-    "#     rprint(f\"  • Markdown report: {markdown_file}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Cell 28\n",
-    "\n",
-    "# # Export reports with visualization reference\n",
-    "# if not combined_df.empty:\n",
-    "#     # Use the dashboard timestamp from earlier\n",
-    "#     export_executive_report(combined_df, visualization_timestamp=dashboard_timestamp)\n",
-    "    \n",
-    "#     rprint(\"\\n[bold green]🎉 Executive Analysis Complete![/bold green]\")\n",
-    "#     rprint(\"[cyan]📊 Dashboard and reports are ready for executive presentation[/cyan]\")\n",
-    "# else:\n",
-    "#     rprint(\"[red]❌ Cannot export reports - no data available[/red]\")\n",
-    "#     rprint(\"\\n[yellow]💡 To use this notebook:[/yellow]\")\n",
-    "#     rprint(\"  1. Run llama_document_aware_batch.ipynb to generate Llama results\")\n",
-    "#     rprint(\"  2. Run internvl3_document_aware_batch.ipynb to generate InternVL3 results\")\n",
-    "#     rprint(\"  3. Re-run this notebook to generate the executive comparison\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5810,11 +5588,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">✅ MODEL_COMPARISON_ANALYSIS.md updated </span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">(</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">12200</span><span style=\"color: #008000; text-decoration-color: #008000\"> characters</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">)</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">✅ MODEL_COMPARISON_REPORT.md updated </span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">(</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">12200</span><span style=\"color: #008000; text-decoration-color: #008000\"> characters</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">)</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[32m✅ MODEL_COMPARISON_ANALYSIS.md updated \u001b[0m\u001b[1;32m(\u001b[0m\u001b[1;32m12200\u001b[0m\u001b[32m characters\u001b[0m\u001b[1;32m)\u001b[0m\n"
+       "\u001b[32m✅ MODEL_COMPARISON_REPORT.md updated \u001b[0m\u001b[1;32m(\u001b[0m\u001b[1;32m12200\u001b[0m\u001b[32m characters\u001b[0m\u001b[1;32m)\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -5836,11 +5614,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">✅ Auto-generation complete: MODEL_COMPARISON_ANALYSIS.md</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">✅ Auto-generation complete: MODEL_COMPARISON_REPORT.md</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;32m✅ Auto-generation complete: MODEL_COMPARISON_ANALYSIS.md\u001b[0m\n"
+       "\u001b[1;32m✅ Auto-generation complete: MODEL_COMPARISON_REPORT.md\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -5848,15 +5626,15 @@
     }
    ],
    "source": [
-    "#Cell 29\n",
+    "#Cell 25\n",
     "\n",
-    "# Auto-generate MODEL_COMPARISON_ANALYSIS.md from notebook results\n",
+    "# Auto-generate MODEL_COMPARISON_REPORT.md from notebook results\n",
     "\n",
     "from datetime import datetime\n",
     "from pathlib import Path\n",
     "\n",
     "def generate_model_comparison_report(llama_df, internvl3_quantized_df, internvl3_non_quantized_df, field_performance_df=None, hallucination_summary=None):\n",
-    "    \"\"\"Generate comprehensive MODEL_COMPARISON_ANALYSIS.md from notebook analysis.\n",
+    "    \"\"\"Generate comprehensive MODEL_COMPARISON_REPORT.md from notebook analysis.\n",
     "\n",
     "    Args:\n",
     "        llama_df: DataFrame with Llama batch results\n",
@@ -5952,7 +5730,7 @@
     "    report = f\"\"\"# Model Comparison Analysis Report\n",
     "\n",
     "**Auto-Generated from Notebook**: {timestamp}\n",
-    "**Source**: `model_comparison.ipynb`\n",
+    "**Source**: `model_comparison_reporter.ipynb`\n",
     "**Dataset**: {total_docs} documents ({bank_count} bank statements, {invoice_count} invoices, {receipt_count} receipts)\n",
     "**Evaluation Fields**: {num_fields} business document fields\n",
     "\n",
@@ -6352,17 +6130,17 @@
     "---\n",
     "\n",
     "**Report Auto-Generated**: {timestamp}\n",
-    "**Source Notebook**: `model_comparison.ipynb`\n",
+    "**Source Notebook**: `model_comparison_reporter.ipynb`\n",
     "**Visualizations**: `output/visualizations/`\n",
     "**Next Update**: Re-run notebook to refresh all metrics and visualizations\n",
     "    \"\"\"\n",
     "\n",
     "    # Write to file\n",
-    "    output_path = Path('MODEL_COMPARISON_ANALYSIS.md')\n",
+    "    output_path = Path('MODEL_COMPARISON_REPORT.md')\n",
     "    with output_path.open('w', encoding='utf-8') as f:\n",
     "        f.write(report)\n",
     "\n",
-    "    rprint(f\"[green]✅ MODEL_COMPARISON_ANALYSIS.md updated ({len(report)} characters)[/green]\")\n",
+    "    rprint(f\"[green]✅ MODEL_COMPARISON_REPORT.md updated ({len(report)} characters)[/green]\")\n",
     "    rprint(f\"[cyan]📄 Report generated from notebook execution at {timestamp}[/cyan]\")\n",
     "\n",
     "    return output_path\n",
@@ -6385,13 +6163,6 @@
     "    import traceback\n",
     "    traceback.print_exc()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
